--- a/Matrix.html
+++ b/Matrix.html
@@ -1,9 +1,45 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
 		<title>Q ⟩ Matrix</title>
+		<meta charset="utf-8">
+		<meta name="description"          content="Q.js is quantum computing in your browser.">
+		<meta name="copyright"            content="Stewart Smith 2019">
+		<meta name="keywords"             content="
+
+			quantum, quantum physics, quantum mechanics, superposition,
+			quantum computer, quantum computing, qubit, qbit, gate, Hadamard,
+
+			Google, Microsoft, IBM, DWave, D-Wave, NASA,
+			Quil, OpenQASM,
+			ProjectQ, Qiskit, 
+			Quantum Development Kit, Cirq, Strawberry Fields, t|ket>,
+			QCL, Quantum pseudocode, Q#, Q|SI>, Q language, qGCL, QFC, QML, LIQUi|>, Quipper,
+
+			Web, Web site, website, Web browser, browser, HTML, HTML5, JavaScript, ES6, CSS,
+
+			Stewart Smith, Stewart, Stew, Stuart, Steven, Steve, Stewdio, stew_rtsmith, @stew_rtsmith,
+			Moar, Moar Technologies Corp, MTC,">
+
+		<meta name="twitter:card"         content="summary">
+		<meta name="twitter:site"         content="@stew_rtsmith">
+		<meta name="twitter:creator"      content="@stew_rtsmith">
+		<meta name="twitter:description"  content="Quantum computing in your browser.">
+		<meta name="twitter:title"        content="Q.js">
+		<meta name="twitter:image"        content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
+		<meta name="twitter:url"          content="https://stewdio.github.io/q.js/">
+		
+		<meta property="og:type"          content="website">
+		<meta property="og:description"   content="Quantum computing in your browser.">
+		<meta property="og:title"         content="Q.js">
+		<meta property="og:image"         content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
+		<meta property="og:url"           content="http://stewartsmith.io">
+		
+		<link rel="canonical"             href="https://stewdio.github.io/q.js/">
+		<link rel="icon" type="image/png" href="Assets/q-favicon-064.png">
+		<link rel="apple-touch-icon"      href="Assets/q-favicon-144.png">
 		<link rel="stylesheet" type="text/css" href="Assets/style.css">
+		
 		<script src="Q/Q.js"></script>
 		<script src="Q/ComplexNumber.js"></script>
 		<script src="Q/Matrix.js"></script>
