--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -123,7 +123,7 @@
 ┄───┴───┴───┴───┴───┴───┴───┴───┄  
 
 </pre></code>
-			<h3 id="Complex_numbers">Complex number ℂ</h3>
+			<h3 id="Complex_numbers">Complex numbers ℂ</h3>
 			<p>
 				We just saw that multiplying a real number by <span class="symbol">i</span>
 				yields an imaginary number.
@@ -177,6 +177,10 @@ i.power( 2 ).toString()<span class="comment">//  Returns  '-1'</span>
 				value returned is always an instance of <code>Q.ComplexNumber</code>.
 			</p>
 			<hr>
+			<h3>Constructor</h3>
+			<p>
+				TK
+			</p>
 			<h3>Constants</h3>
 <pre><code>
 ZERO     = new Q.ComplexNumber( 0, 0 )
@@ -189,16 +193,16 @@ INFINITY = new Q.ComplexNumber( Infinity, Infinity )
 NAN      = new Q.ComplexNumber( NaN, NaN )
 
 </pre></code>
-			<h3>Class methods</h3>
+			<h3>Class properties</h3>
 			<p>
 				TK
 			</p>
-			<h3>Instance methods</h3>
+			<h3>Instance properties</h3>
 			<p>
 				TK
 			</p>
-			<br>
-			Source:<br>
+			<hr>
+			Source:
 			<a href="https://github.com/stewdio/q.js/blob/master/Q/ComplexNumber.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/Q/ComplexNumber.js</a>
 		</main>
 		<script>
