--- a/Gate.html
+++ b/Gate.html
@@ -50,7 +50,40 @@
 	</head>
 	<body>
 		<main>
-			Documentation TK!
+		<h3>Constants</h3>
+		<p>
+			2 × 2 matrices
+		</p>
+<pre><code>
+HADAMARD
+PAULI_X
+PAULI_Y
+PAULI_Z
+PHASE
+PI_8
+
+</pre></code>
+		<p>
+			4 × 4 matrices
+		</p>
+<pre><code>
+CONTROLLED_NOT
+SWAP
+CONTROLLED_Z
+CONTROLLED_PHASE
+
+</pre></code>
+		<p>
+			8 × 8 matrices
+		</p>
+<pre><code>
+TOFFOLI
+CONTROLLED_SWAP
+
+</code></pre>
+			<hr>
+			Source:
+			<a href="https://github.com/stewdio/q.js/blob/master/Q/Gate.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/Q/Gate.js</a>
 		</main>
 		<script>
 			
