--- a/Qubit.html
+++ b/Qubit.html
@@ -109,6 +109,11 @@ const ourQubit = new Q.Qubit( 0, 1 )
 				machine for quantum compuation, though Q.js currently focusses on 
 				matrices for calculation. 
 			</p>
+			<hr>
+			<h3>Constructor</h3>
+			<p>
+				TK
+			</p>
 			<h3>Constants</h3>
 			<p>
 				Q.Qubit provides the following built-in <a href="https://en.wikipedia.org/wiki/Jones_calculus#Jones_vectors" target="_blank">Jones vectors</a>.
@@ -116,12 +121,29 @@ const ourQubit = new Q.Qubit( 0, 1 )
 <pre><code>
 HORIZONTAL = new Q.Qubit( 1, 0 )
 VERTICAL   = new Q.Qubit( 0, 1 )
-DIAGONAL      = new Q.Qubit( 1÷√2,  1÷√2 )
-ANTI_DIAGONAL = new Q.Qubit( 1÷√2, -1÷√2 )
-RIGHT_HAND_CIRCULAR_POLARIZED = new Q.Qubit( 1÷√2, -1÷√2𝒊 )
-LEFT_HAND_CIRCULAR_POLARIZED  = new Q.Qubit( 1÷√2,  1÷√2𝒊 )
 
 </code></pre>
+<pre><code>
+DIAGONAL      = new Q.Qubit( 1÷√2,  1÷√2 )
+ANTI_DIAGONAL = new Q.Qubit( 1÷√2, -1÷√2 )
+
+</code></pre>
+<pre><code>
+RIGHT_HAND_CIRCULAR_POLARIZED = new Q.Qubit( 1÷√2, -1÷√2i )
+LEFT_HAND_CIRCULAR_POLARIZED  = new Q.Qubit( 1÷√2,  1÷√2i )
+
+</code></pre>
+			<h3>Class properties</h3>
+			<p>
+				TK
+			</p>
+			<h3>Instance properties</h3>
+			<p>
+				TK
+			</p>
+			<hr>
+			Source:
+			<a href="https://github.com/stewdio/q.js/blob/master/Q/Qubit.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/Q/Qubit.js</a>
 		</main>
 		<script>
 
