--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@ a.toString()<span class="comment">//  Now returns '4 - 2i'</span>
 				<code>Q</code> provides some convenience functions.
 				(And we’ll detail all of that <em>later</em> when we make another pass on revising these docs!)
 			</p>
-			<br>
-			Source:<br>
+			<hr>
+			Source:
 			<a href="https://github.com/stewdio/q.js/blob/master/Q/Q.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/Q/Q.js</a>
 		</main>
 		<script>
