Cat dog in index doc.

--- a/Qubit.html
+++ b/Qubit.html
@@ -53,10 +53,10 @@
 			<p>
 				A <a href="https://en.wikipedia.org/wiki/Qubit" target="_blank">qubit</a>
 				is represented by 
-				<code>Q.<a href="Matrix.html">Matrix</a>([ 𝒂 ],[ 𝒃 ])</code>
-				where 𝒂 and 𝒃 are “complex 
-				numbers” such that |𝒂| × |𝒂| + |𝒃| × |𝒃| = 1. If brevity’s your thing, that’s the 
-				same as |𝒂|² + |𝒃|² = 1. 
+				<code>Q.<a href="Matrix.html">Matrix</a>([ a ],[ b ])</code>
+				where <span class="symbol">a</span> and <span class="symbol">b</span> are 
+				<a href="ComplexNumber.html">complex numbers</a>
+				such that |<span class="symbol">a</span>|<sup>2</sup> + |<span class="symbol">b</span>|<sup>2</sup> = 1. 
 			</p>
 			<pre><code>
 const ourQubit = new Q.Qubit( 0, 1 )
