--- a/Qubit.html
+++ b/Qubit.html
@@ -127,6 +127,7 @@
 			<hr>
 			<h3>Constructor</h3>
 			<p>
+				Qubit extends <code><a href="Matrix.html">Matrix</a></code>.
 				TK.<br>
 				<code>Q.<a href="Matrix.html">Matrix</a>([ a ],[ b ])</code>
 <pre><code>
