More Matrix doc updates.

--- a/Gate.html
+++ b/Gate.html
@@ -50,10 +50,15 @@
 	</head>
 	<body>
 		<main>
-		<h3>Constants</h3>
-		<p>
-			2 × 2 matrices
-		</p>
+			<h3>Quantum logic gates</h3>
+			<p>
+				Description TK
+			</p>
+			<hr>
+			<h3>Constants</h3>
+			<p>
+				2 × 2 matrices
+			</p>
 <pre><code>
 HADAMARD
 PAULI_X
@@ -81,6 +86,14 @@ TOFFOLI
 CONTROLLED_SWAP
 
 </code></pre>
+			<h3>Class properties</h3>
+			<p>
+				Description TK
+			</p>
+			<h3>Instance properties</h3>
+			<p>
+				Description TK
+			</p>
 			<hr>
 			Source:
 			<a href="https://github.com/stewdio/q.js/blob/master/Q/Gate.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/Q/Gate.js</a>
