--- a/Qubit.html
+++ b/Qubit.html
@@ -157,11 +157,11 @@ LEFT_HAND_CIRCULAR_POLARIZED  = new Q.Qubit( 1÷√2,  1÷√2i )
 </code></pre>
 			<h3>Class properties</h3>
 			<p>
-				TK
+				Description TK
 			</p>
 			<h3>Instance properties</h3>
 			<p>
-				TK
+				Description TK
 			</p>
 			<hr>
 			Source:
