--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -182,6 +182,13 @@ i.power( 2 ).toString()<span class="comment">//  Returns  '-1'</span>
 				TK
 			</p>
 			<h3>Constants</h3>
+			<p>
+				The following constant values are attached to <code>Q.ComplexNumber</code>
+				for general convenience
+				<em>and</em> to the <code>Q.ComplexNumber.constants</code> object
+				for lookup convenience in the console
+				or iteration convenience via <code>Object.keys</code>. 
+			</p>
 <pre><code>
 ZERO     = new Q.ComplexNumber( 0, 0 )
 ONE      = new Q.ComplexNumber( 1, 0 )
@@ -195,11 +202,11 @@ NAN      = new Q.ComplexNumber( NaN, NaN )
 </pre></code>
 			<h3>Class properties</h3>
 			<p>
-				TK
+				Description TK
 			</p>
 			<h3>Instance properties</h3>
 			<p>
-				TK
+				Description TK
 			</p>
 			<hr>
 			Source:
